k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
spec:
  rules:
  - host: "aws.zallesov.dev"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: echo-service
            port:
              number: 80
